"Misión, Visión y Valores 2".
Se creó la página de "Misión, Visión y Valores".

Se cambio el nombre de la carpeta "historia" a "nosotros".

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="/pages/historia/historia.html"><p>Historia</p></a>
+                                    <a href="/pages/nosotros/historia.html"><p>Historia</p></a>
                                 </div>
                                 <div>
-                                    <a href="#"><p>Misión, Visión y Valores</p></a>
+                                    <a href="/pages/nosotros/mision_vision_valores.html"><p>Misión, Visión y Valores</p></a>
                                 </div>
                             </div>
                         </div>
