--- a/pages/nosotros/historia.html
+++ b/pages/nosotros/historia.html
@@ -51,7 +51,7 @@
                             <a href="#">Nosotros</a>
                             <ul>
                                 <li><a href="#">Historia</a></li>
-                                <li><a href="#">Misión, Visión y Valores</a></li>
+                                <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Estructura Física</a></li>
