--- a/pages/nosotros/mision_vision_valores.html
+++ b/pages/nosotros/mision_vision_valores.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Minas - Jose Laurencio Silva</title>
+        <title>Misión, Visión y Valores - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -43,15 +43,15 @@
                             <ul>
                                 <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
-                                <li><a href="#">Minas</a></li>
+                                <li><a href="/pages/menciones/minas.html">Minas</a></li>
                                 <li><a href="/pages/menciones/informatica.html">Informática</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">Nosotros</a>
                             <ul>
-                                <li><a href="/pages/nosotros/mision_vision_valores.html">Historia</a></li>
-                                <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
+                                <li><a href="/pages/nosotros/historia.html">Historia</a></li>
+                                <li><a href="#">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Estructura Física</a></li>
@@ -65,27 +65,30 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Minas</h1>
-                        <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
-                        <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
-                        <br />
-                        <p class="text-section">Sus responsabilidades incluyen calcular el uso y valor potenciales de los depósitos minerales, la gestión y expansión de las minas, y la previsión de los posibles efectos ambientales de la minería, como puede ser la contaminación atmosférica.</p>
-                        <br />
-                        <p class="text-section">La clasificación de las materias son:</p>
-                        <ul class="list-section">
-                            <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
-                            </p>
-                        </ul>
+                        <h1 class="title-section">Misión, Visión y Valores</h1>
+                        <div>
+                            <img src="/resources/images/imagen_antigua_liceo.jpg" alt="" class="img-content" />
+                            <i>Imágen de la entrada del Liceo en el 2008.</i>
+                        </div>
+                        <p class="text-section">
+                            <ul>
+                                <li><b>Misión:</b></li>
+                                <br>
+                                <p>El E.T.I.R.Z "José Laurencio Silva" es una institución participativa y democrática donde todos sus miembros participan en la toma de decisiones y en la ejecución y evaluación de las actividades escolares. En ella se promueven proyectos y programas basados en la formación técnica y la ética profesional que benefician a la comunidad estudiantil y a la comunidad en general a través de aprendizajes significativos en un clima de relaciones horizontales donde las diferentes opiniones se valorizan, logrando que la institución sea una organización integrada a la comunidad como centro para la reflexión y discusión de problemas que afectan directamente al educando y al colectivo.</p>
+                                <br>
+                                <li><b>Visión:</b></li>
+                                <br>
+                                <p>El E.T.I.R.Z "José Laurencio Silva" se convertirá en una institución modelo en formación técnica que inspire al trabajo y al aprendizaje cubriendo las necesidades tanto pedagógicas, culturales, sociales, laborales y físicas que los estudiantes requieran y de esta forma lograr que la institución se convierta en un espacio de encuentro social y propicie proyectos que impacten positivamente a la comunidad y de esta manera, formar un ser social, solidario, creativo, productivo y consciente que dominen los saberes fundamentales como son el conocer, el hacer y el convivir.</p>
+                                <br>
+                                <li><b>Valores:</b></li>
+                                <br>
+                                <p>Como institución transformadora de la sociedad se identifica con valores como son la identidad nacional, la participación, la intrgración, el respeto a la diversidad, la responsabilidad, la honestidad, cooperativismo, compañerismo, igualdad, libertad y trabajo liberador que conlleva a la construcción de una nueva sociedad más justa y al fortalecimiento de la transformación de un nuevo país basado en un marco axiológico que promueva la práctica de los mismos.</p>
+                                <br>
+                                <p>Promover por medio de la creación de un Aula Ambiente-administrativo prácticas de casos inherentes al estudio de la administración de empresas.</p>
+                                <br>
+                                <p>Fortaceler el sentido de pertenencia en la comunidad educativa de la Escuela Técnica Industrial "E.T.I.R.Z José Laurencio Silva" con el objeto de garantizar que dichas actividades puedan ser sostenibles en el tiempo y mejoradas continuamente.</p>
+                            </ul>
+                        </p>
                     </div>
                 </div>
             </section>
