--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -50,8 +50,8 @@
                         <li>
                             <a href="#">Nosotros</a>
                             <ul>
-                                <li><a href="/pages/historia/historia.html">Historia</a></li>
-                                <li><a href="#">Misión, Visión y Valores</a></li>
+                                <li><a href="/pages/nosotros/historia.html">Historia</a></li>
+                                <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Estructura Física</a></li>
