--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="#"><p>Estructura Física</p></a>
+                                    <a href="/pages/estructura/estructura_fisica.html"><p>Estructura Física</p></a>
                                 </div>
                             </div>
                         </div>
