--- a/pages/menciones/informatica.html
+++ b/pages/menciones/informatica.html
@@ -54,7 +54,7 @@
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
@@ -66,7 +66,9 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Informática</h1>
-                        <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content" />
+                        <div>
+                            <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content" />
+                        </div>
                         <p class="text-section">El Técnico en informática analiza, diseña y maneja sistemas de información. Desarrolla distintos tipos de estructuras lógcias para solucionar problemas usando computadoras. Toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación desarrollados.</p>
                         <br />
                         <p class="text-section">Su campo de especialización le permite un amplio manejo operativo de equipos, programas operacionales, técnicas de programación, lenguajes de computación, metodología de análisis de sistemas, estructuración de datos y desempeño en el área de la ofimática.</p>
