--- a/pages/nosotros/historia.html
+++ b/pages/nosotros/historia.html
@@ -54,7 +54,7 @@
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
