--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -42,7 +42,7 @@
                             <a href="#">Menciones</a>
                             <ul>
                                 <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
-                                <li><a href="#">Administración</a></li>
+                                <li><a href="/pages/menciones/administracion.html">Administración</a></li>
                                 <li><a href="/pages/menciones/minas.html">Minas</a></li>
                                 <li><a href="/pages/menciones/informatica.html">Informática</a></li>
                             </ul>
@@ -54,7 +54,7 @@
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
@@ -66,7 +66,9 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Administración</h1>
-                        <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content" />
+                        <div>
+                            <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content" />
+                        </div>
                         <p class="text-section">El técnico en Administración esta capacitado para ejecutar y coordinar procesos administrativos, de recursos humanos y operaciones financieras de una organización, colaborando desde el análisis técnico en la toma de decisiones.</p>
                         <br />
                         <p class="text-section">Su preparación en actividades teórico-prácticas le proporcionan la experiencia requerida para ser un profesional analítico, creativo, optimista y ético en el desempeño de sus funciones. Aplica sus conocimientos y habilidades en administración para participar eficientemente en la organización un funcionamiento de las instituciones, seleccionando y controlando la administración de los diferentes recursos, diseñando estrategias que le permiten evaluar y retroalimentar el proceso administrativo a través del análisis y su criterio científico.</p>
