--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -54,7 +54,7 @@
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
@@ -66,7 +66,9 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content" />
+                        <div>
+                            <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content" />
+                        </div>
                         <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
                         <br />
                         <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
