--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -54,7 +54,7 @@
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
@@ -66,7 +66,9 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Minas</h1>
-                        <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
+                        <div>
+                            <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
+                        </div>
                         <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
                         <br />
                         <p class="text-section">Sus responsabilidades incluyen calcular el uso y valor potenciales de los depósitos minerales, la gestión y expansión de las minas, y la previsión de los posibles efectos ambientales de la minería, como puede ser la contaminación atmosférica.</p>
