"Servicios y propósito general".
Se le agregó contenido del Propósito general del Liceo a la sección de los Servicios.

Se creó la página de los Servicios.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="#"><p>Servicios</p></a>
+                                    <a href="/pages/servicios/servicios.html"><p>Servicios y Propósito General</p></a>
                                 </div>
                             </div>
                         </div>
