--- a/pages/nosotros/historia.html
+++ b/pages/nosotros/historia.html
@@ -55,7 +55,7 @@
                             </ul>
                         </li>
                         <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
-                        <li><a href="#">Servicios</a></li>
+                        <li><a href="/pages/servicios/servicios.html">Servicios y Propósito General</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
                 </div>
