--- a/pages/servicios/servicios.html
+++ b/pages/servicios/servicios.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Minas - Jose Laurencio Silva</title>
+        <title>Servicios y Propósito General - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -43,19 +43,19 @@
                             <ul>
                                 <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
-                                <li><a href="#">Minas</a></li>
-                                <li><a href="/pages/menciones/informatica.html">Informática</a></li>
+                                <li><a href="/pages/menciones/minas.html">Minas</a></li>
+                                <li><a href="#">Informática</a></li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">Nosotros</a>
                             <ul>
-                                <li><a href="/pages/nosotros/mision_vision_valores.html">Historia</a></li>
+                                <li><a href="/pages/nosotros/historia.html">Historia</a></li>
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
                         <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
-                        <li><a href="/pages/servicios/servicios.html">Servicios y Propósito General</a></li>
+                        <li><a href="#">Servicios y Propósito General</a></li>
                         <li><a href="#">Galería</a></li>
                     </ul>
                 </div>
@@ -65,29 +65,17 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Minas</h1>
+                        <h1 class="title-section">Servicios y Propósito General</h1>
                         <div>
-                            <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
+                            <img src="" class="img-content">
                         </div>
-                        <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
-                        <br />
-                        <p class="text-section">Sus responsabilidades incluyen calcular el uso y valor potenciales de los depósitos minerales, la gestión y expansión de las minas, y la previsión de los posibles efectos ambientales de la minería, como puede ser la contaminación atmosférica.</p>
-                        <br />
-                        <p class="text-section">La clasificación de las materias son:</p>
-                        <ul class="list-section">
-                            <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
-                            </p>
-                        </ul>
+                        <p class="text-section">Tenemos servicios de alimentación que se localizan en el comedor con asientos y un área amplia tambien con un cableado de electricidad y tuberias de agua; Ademas un wifi privado el cual solo accede el personal autorizado para la implementación de actividades dentro de la institución. Tambien poseemos con 4 baños tanto para el docente como para el alumno mas el del directivo.</p>
+                        <br>
+                        <p class="text-section">
+                            <strong>Propósito General:</strong>
+                        </p>
+                        <br>
+                        <p class="text-section">Proponer la Creación de un Aula Ambiente-Administrativo que permita a los estudiantes de Administración poner en práctica los conocimientos obtenidos a lo largo del periodo educativo.</p>
                     </div>
                 </div>
             </section>
